--- a/DBLab/DBLab.csproj
+++ b/DBLab/DBLab.csproj
@@ -70,8 +70,10 @@
       <DependentUpon>ApplicationForm.cs</DependentUpon>
     </Compile>
     <Compile Include="DBConnection.cs" />
+    <Compile Include="Phone.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs" />
     <EmbeddedResource Include="AddStudentControl.resx">
       <DependentUpon>AddStudentControl.cs</DependentUpon>
     </EmbeddedResource>
